# BeetleBot

./: README.md
docs_ros2/: COMMAND_UTILITY_README.md  LYRA_COMMAND_UTILITY_SETUP.md  README.md  lyra_doctor.sh
lyra_ws/src/beetlebot_description/: CMakeLists.txt  package.xml
lyra_ws/src/beetlebot_description/launch/: display_launch.py
lyra_ws/src/beetlebot_description/meshes/: bl_link.STL  br_link.STL  fl_link.STL  fr_link.STL  lidar_link.STL
lyra_ws/src/beetlebot_description/rviz/: beetlebot.rviz  nav2.rviz  nav2_amcl.rviz  odom_only.rviz  slam_with_cam.rviz
lyra_ws/src/beetlebot_description/urdf/: beetlebot.urdf
lyra_ws/src/docs_ros2/: 00_START_HERE.md  CONSOLIDATED_ROS_LLM_REVIEW_1218.txt  FILES_CREATED.md  INDEX.md  LYRA_QUICK_REFERENCE.md  NAV2_OPTIMIZATION_GUIDE.md  README.md  STATIC_ANALYSIS_FINDINGS.md  WINDOWS_WSL_SETUP_GUIDE.md  lyra_commands.sh
lyra_ws/src/lyra_bringup/: CMakeLists.txt  package.xml
lyra_ws/src/lyra_bringup/launch/: base.launch.py  lidar.launch.py  odom_ekf.launch.py  odom_ekf_imu.launch.py  robot.launch.py
lyra_ws/src/lyra_control/: package.xml  setup.cfg  setup.py  setup.py.backup
lyra_ws/src/lyra_control/config/: joystick.yaml
lyra_ws/src/lyra_control/lyra_control/: cmd_vel_mux.py  joy_teleop_wrapper.py
lyra_ws/src/lyra_nav2/: package.xml  setup.cfg  setup.py
lyra_ws/src/lyra_nav2/config/: amcl.yaml  nav2_params.yaml  nav2_params.yaml.bak
lyra_ws/src/lyra_nav2/launch/: full_nav.launch.py  nav2_amcl.launch.py
lyra_ws/src/lyra_slam/: package.xml  setup.cfg  setup.py
lyra_ws/src/lyra_slam/config/: slam_toolbox.yaml
lyra_ws/src/lyra_slam/launch/: slam.launch.py  slam_bringup.launch.py
lyra_ws/src/lyra_visualization/: package.xml  setup.cfg  setup.py
lyra_ws/src/lyra_visualization/lyra_visualization/: wheel_state_publisher.py
maps/: house_map.pgm  house_map.yaml
