<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>beetlebot_description</name>
  <version>1.0.0</version>
  <description>URDF and mesh description for Lyra differential drive robot (BeetleBot platform)</description>
  <maintainer email="praveen.kumar@siliris.com">Praveen Kumar</maintainer>
  <license>GPLv3</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
