<?xml version="1.0"?>
<package format="3">
  <name>lyra_visualization</name>
  <version>0.0.0</version>
  <description>Wheel joint state publisher for RViz visualization of Lyra robot</description>
  <maintainer email="praveen.kumar@siliris.com">Praveen Kumar</maintainer>
  <license>GPLv3</license>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- Build system -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
